# RunScope

./: .gitignore  Cargo.toml  README.ja.md  README.md  REQUIREMENTS.md  build_release.ps1  deny.toml  run_windows.bat  settings.example.json
.github/workflows/: release.yml  windows-build.yml
src/: app.rs  fonts.rs  main.rs  model.rs  settings.rs
src/collectors/: gpu_nvidia_smi.rs  gpu_nvml.rs  gpu_windows_perf.rs  local_listeners.rs  mod.rs  process_collector.rs
src/services/: command_timeout.rs  formatter.rs  mod.rs  process_identity.rs  protection.rs  scope_detector.rs  screenshot.rs  self_check.rs  terminator.rs
src/ui/: detail_panel.rs  mod.rs  process_table.rs  settings_panel.rs
