[package]
name = "runscope"
version = "1.1.0"
edition = "2021"
description = "A lightweight Windows RAM/VRAM process inspector for cleaning up local development and AI workloads."
license = "MIT"
repository = "https://github.com/AiWithYou/RunScope"
readme = "README.md"
keywords = ["windows", "process", "vram", "gpu", "egui"]
categories = ["gui", "os::windows-apis"]

[dependencies]
anyhow = "1"
csv = "1"
eframe = { version = "0.28", default-features = false, features = [
  "accesskit",
  "default_fonts",
  "glow",
] }
egui = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_IpHelper",
  "Win32_Networking_WinSock",
  "Win32_Storage_FileSystem",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging"
] }

[profile.release]
lto = true
codegen-units = 1
strip = true
